add_subdirectory( kwinoptions )
add_subdirectory( kwindecoration )
add_subdirectory( kwinrules )
add_subdirectory( kwincompositing )
if(KWIN_BUILD_SCREENEDGES)
    add_subdirectory( kwinscreenedges )
endif()
if(KWIN_BUILD_SCRIPTING)
    add_subdirectory( kwinscripts )
endif()
add_subdirectory( kwindesktop )

if( KWIN_BUILD_TABBOX )
add_subdirectory( kwintabbox )
endif()
